@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + {abstract} GetTools(int LocationX, int LocationY):List<BaseTool>
 }

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy

class MobEnemy_plus {
    + MobEnemy_plus(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<EnemyBullet>
    + GetTools(int LocationX, int LocationY):List<BaseTool>
}
AbstractAircraft <|-- MobEnemy_plus

class SuperMobEnemy {
    + SuperMobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<EnemyBullet>
    + GetTools(int LocationX, int LocationY):List<BaseTool>
}
MobEnemy_plus <|-- SuperMobEnemy

class AceMobEnemy {
    + AceMobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<EnemyBullet>
    + GetTools(int LocationX, int LocationY):List<BaseTool>
}
MobEnemy_plus <|-- AceMobEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

abstract BaseTool {
    # type:int
    + BaseTool(int locationX, int locationY, int speedX, int speedY, int type)
    + forward():void
    + getEffect(): int
}

class BloodTool{
    + BloodTool(int locationX, int locationY, int speedX, int speedY, int type)
}

class FireTool{
    + FireTool((int locationX, int locationY, int speedX, int speedY, int type)
}

class FirePlusTool{
    + FirePlusTool((int locationX, int locationY, int speedX, int speedY, int type)
}

class BombTool{
    + BombTool(int locationX, int locationY, int speedX, int speedY, int type)
}

class FreezeTool{
    + FreezeTool(int locationX, int locationY, int speedX, int speedY, int type)
}


AbstractFlyingObject <|-- BaseTool
BaseTool <|-- BloodTool
BaseTool <|-- FireTool
BaseTool <|-- BombTool
BaseTool <|-- FreezeTool
FireTool <|-- FirePlusTool
@enduml